<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailKamenRider"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="200sp"
                android:layout_height="wrap_content" >
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img_detailKamenRider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/zio" />
                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextContent.Subtitle"
                    android:text="@string/actor"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/tv_kamenRiderActor"
                    style="@style/TextContent"
                    android:layout_marginBottom="20dp"
                    android:lineSpacingMultiplier="1"
                    android:text="@string/kamen_rider_actor"
                    android:textColor="@android:color/black" />

                <TextView
                    style="@style/TextContent.Subtitle"
                    android:text="@string/played"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/tv_kamenRiderPlayed"
                    style="@style/TextContent"
                    android:layout_marginBottom="16dp"
                    android:lineSpacingMultiplier="1"
                    android:text="@string/kamen_rider_played"
                    android:textColor="@android:color/black" />

                <TextView
                    style="@style/TextContent.Subtitle"
                    android:text="Episode"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/tv_kamenRiderEpisode"
                    style="@style/TextContent"
                    android:layout_marginBottom="20dp"
                    android:lineSpacingMultiplier="1"
                    android:text="@string/kamen_rider_episode"
                    android:textColor="@android:color/black" />

                <TextView
                    style="@style/TextContent.Subtitle"
                    android:text="ShowTimes"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/tv_kamenRiderShowTime"
                    style="@style/TextContent"
                    android:layout_marginBottom="20dp"
                    android:lineSpacingMultiplier="1"
                    android:text="20 September 2010 - 9 Oktober 2011"
                    android:textColor="@android:color/black" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/TextContent.Black"
            android:id="@+id/tv_kamenRiderName"
            android:textSize="32sp"
            android:text="@string/kamen_rider_name"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>


        <TextView
            style="@style/TextContent"
            android:id="@+id/tv_kamenRiderDetail"
            android:text="@string/detail_kamen_rider"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"/>

        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/form"
            android:layout_marginBottom="8dp"/>

        <TextView
            style="@style/TextContent"
            android:id="@+id/tv_kamenRiderForm"
            android:text="@string/form_kamen_rider"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"/>

    </LinearLayout>

</ScrollView>